Added more locale stuff for sites

--- a/config/locales/en-US.yml
+++ b/config/locales/en-US.yml
@@ -5,3 +5,6 @@ en-US:
     site_account: Site Account
     site_layout: Site Layout
     site: Site
+    sites: Sites
+    site_details: Site Details
+    listing_sites: Listing sites
